cabal-version:      3.0
name:               MSFs
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             madiestic
maintainer:         madjestic13@gmail.com
copyright:          Vladimir Lopatin
category:           App
build-type:         Simple

extra-source-files: CHANGELOG.md

executable MSFs
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
                    , bearriver
                    , dunai
                    , sdl2
    hs-source-dirs:   app
    default-language: Haskell2010

executable Pong1D
    main-is:          Pong1D.hs
    build-depends:    base ^>=4.16.4.0
                    , bearriver
                    , dunai
                    , transformers
                    , list-t
    hs-source-dirs:   app
    default-language: Haskell2010

executable Pong1DRef
    main-is:          Pong1DRef.hs
    build-depends:    base ^>=4.16.4.0
                    , bearriver
                    , dunai
                    , transformers
    hs-source-dirs:   app
    default-language: Haskell2010

executable Yampa
    main-is:          Yampa.hs
    build-depends:    base ^>=4.16.4.0
                    , bearriver
                    , dunai
                    , transformers
    hs-source-dirs:   app
    default-language: Haskell2010
            
executable Test
    main-is:          Test.hs
    build-depends:    base ^>=4.16.4.0
                    , nyan-interpolation
                    , PyF
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010

executable SimpleGame
    main-is:          SimpleGame.hs
    build-depends:    base ^>=4.16.4.0
                    , dunai
                    , sdl2
                    , transformers
                    
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010

executable Mandelbrot
    main-is:          Mandelbrot.hs
    build-depends:    base ^>=4.16.4.0
                    , bytestring
                    , dunai
                    , OpenGL
                    , sdl2
                    , text
                    , transformers
                    
    other-modules:
                    LoadShaders
                    
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010

executable Mandelbrot_glTF
    main-is:          Mandelbrot_glTF.hs
    build-depends:    base ^>=4.16.4.0
                    , bytestring
                    , dunai
                    , OpenGL
                    , sdl2
                    , text
                    , transformers
                    , gltf-codec
                    , gltf-loader
                    , microlens
                    , vector
                    
    other-modules:
                    LoadShaders
                    
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010

executable Test_glTF
    main-is:          Test_glTF.hs
    build-depends:    base ^>=4.16.4.0
                    , bytestring
                    , linear
                    , gltf-codec
                    , gltf-loader
                    , microlens
                    , vector
                    
    other-modules:
                    --LoadShaders
                    
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010        