cabal-version:      3.0
name:               MSFs
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             madiestic
maintainer:         madjestic13@gmail.com
copyright:          Vladimir Lopatin
category:           App
build-type:         Simple

extra-source-files: CHANGELOG.md

executable MSFs
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
                    , bearriver
                    , dunai
                    , sdl2
    hs-source-dirs:   app
    default-language: Haskell2010

executable Pong1D
    main-is:          Pong1D.hs
    build-depends:    base ^>=4.16.4.0
                    , bearriver
                    , dunai
                    , transformers
                    , list-t
    hs-source-dirs:   app
    default-language: Haskell2010

executable Pong1DRef
    main-is:          Pong1DRef.hs
    build-depends:    base ^>=4.16.4.0
                    , bearriver
                    , dunai
                    , transformers
    hs-source-dirs:   app
    default-language: Haskell2010

executable Yampa
    main-is:          Yampa.hs
    build-depends:    base ^>=4.16.4.0
                    , bearriver
                    , dunai
                    , transformers
    hs-source-dirs:   app
    default-language: Haskell2010
            
executable Test
    main-is:          Test.hs
    build-depends:    base ^>=4.16.4.0
                    , nyan-interpolation
                    , PyF
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010

executable SimpleGame
    main-is:          SimpleGame.hs
    build-depends:    base ^>=4.16.4.0
                    , dunai
                    , sdl2
                    , transformers
                    
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010

executable Mandelbrot
    main-is:          Mandelbrot.hs
    build-depends:    base ^>=4.16.4.0
                    , bytestring
                    , dunai
                    , OpenGL
                    , sdl2
                    , text
                    , transformers
                    
    other-modules:
                    LoadShaders
                    
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010

executable ProjectViewer
    main-is:          ProjectViewer.hs
    ghc-options:    -fprint-potential-instances
    build-depends:    base ^>=4.16.4.0
                    , aeson
                    , aeson-pretty
                    , array
                    , bytestring
                    , containers
                    , dunai
                    , directory
                    , geomancy
                    , gl-block
                    , gltf-codec
                    , gltf-loader
                    , ilist
                    , JuicyPixels
                    , keid-resource-gltf
                    , keid-core ==0.1.8.0
                    , lens
                    , linear
                    , locators
                    , massiv
                    , OpenGL
                    , sdl2
                    , simple-affine-space
                    , sort
                    , text
                    , transformers
                    , microlens
                    , random
                    , rio
                    , split
                    , StateVar
                    , vector
                    , uuid
                    
    other-modules:
                    LoadShaders
                  , Load_glTF
                  , Model_glTF
                  , Projects.Test                  
                  , Graphics.RedViz.Material
                  , Graphics.RedViz.Texture
                  , Graphics.RedViz.Utils
                  , Graphics.RedViz.Backend
                  , Graphics.RedViz.Camera
                  , Graphics.RedViz.Controllable
                  , Graphics.RedViz.Descriptor
                  , Graphics.RedViz.Drawable
                  , Graphics.RedViz.Input.Keyboard
                  , Graphics.RedViz.Input.Mouse
                  , Graphics.RedViz.Object
                  , Graphics.RedViz.Camera
                  , Graphics.RedViz.GLUtil
                  , Graphics.RedViz.GLUtil.JuicyTextures
                  , Graphics.RedViz.GLUtil.Textures
                  , Graphics.RedViz.GLUtil.TypeMapping
                  , Graphics.RedViz.LoadShaders
                  , Graphics.RedViz.Camera.Lens
                  , Graphics.RedViz.Drawable.Lens
                  , Graphics.RedViz.Material.Lens
                  , Graphics.RedViz.Object.Lens
                  , Graphics.RedViz.Rendering
                  , Graphics.RedViz.Texture.Lens
                  , Graphics.RedViz.VAO
                  , Graphics.RedViz.Widget
                  , Graphics.RedViz.Project
                  , Graphics.RedViz.Project.Model
                  
    hs-source-dirs:
                    app
                  , src
    default-extensions:
                    ImportQualifiedPost
                    BlockArguments
                    LambdaCase
                    NamedFieldPuns
                    OverloadedStrings
                    RankNTypes
                    RecordWildCards
                    ScopedTypeVariables
                    TupleSections
                    TypeApplications
                    DerivingStrategies
                    DerivingVia
                    DeriveGeneric
                                                              
    default-language:
                    Haskell2010

library
  exposed-modules:
      Load_glTF
      Model_glTF 
      --Scene_glTF 
  other-modules:
      --Paths_keid_resource_gltf
  hs-source-dirs:
      src
  default-extensions:
      NoImplicitPrelude
      ApplicativeDo
      BangPatterns
      BinaryLiterals
      BlockArguments
      ConstrainedClassMethods
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      EmptyCase
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      HexFloatLiterals
      ImportQualifiedPost
      InstanceSigs
      KindSignatures
      LambdaCase
      LiberalTypeSynonyms
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumDecimals
      NumericUnderscores
      OverloadedStrings
      PatternSynonyms
      PostfixOperators
      QuantifiedConstraints
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      StrictData
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      TypeSynonymInstances
      UnicodeSyntax
      ViewPatterns
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , geomancy >=0.2.6.0
    , gl-block
    , gltf-codec
    , keid-core
    , rio >=0.1.12.0
    , vector
  default-language: Haskell2010
                    
executable Test_glTF
    main-is:          Test_glTF.hs
    build-depends:    base ^>=4.16.4.0
                    , bytestring
                    , linear
                    , gltf-codec
                    , gltf-loader
                    , microlens
                    , vector
                    , keid-resource-gltf
                    
    other-modules:
                    --LoadShaders
                    
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010

executable genMaterial
  main-is:      genMaterial.hs
  hs-source-dirs:
                app
              , src

  ghc-options:   -O2 -threaded -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
  build-depends:
                base                
              , aeson               
              , aeson-pretty        
              , bytestring          
              , containers                      
              , directory           
              , ilist                                                       
              , lens                
              , linear                         
              , locators            
              , OpenGL              
              , random              
              , simple-affine-space           
              , split               
              , text                
              , uuid                
              , vector                         

  other-modules:
                Paths_MSFs
              , Graphics.RedViz.Material.Lens
              , Graphics.RedViz.FromVector
              , Graphics.RedViz.Utils
              , Graphics.RedViz.Texture.Lens
              , Graphics.RedViz.Backend              

  default-language:
                Haskell2010

executable genUUID
  main-is:      genUUID.hs
  hs-source-dirs:
                app
              , src
  --ghc-options:         -threaded -O2 -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
  ghc-options:         -threaded -O2
  --cpp-options:         -DDEBUG
  build-depends:
                base                
              , aeson               
              , aeson-pretty        
              , bytestring          
              , containers          
              , directory           
              , ilist               
              , lens                
              , linear              
              , locators            
              , OpenGL              
              , simple-affine-space                         
              , sort                
              , text                
              , uuid                
              , random
              , array             
              , vector
              , JuicyPixels
              
  other-modules:
                Paths_MSFs
              , Graphics.RedViz.Project.Model
              , Graphics.RedViz.Project.Lens
              , Graphics.RedViz.Camera.Lens
              , Graphics.RedViz.Drawable.Lens
              , Graphics.RedViz.Object.Lens
              , Graphics.RedViz.Texture.Lens
              , Graphics.RedViz.Material
              , Graphics.RedViz.Backend
              , Graphics.RedViz.Utils
              , Graphics.RedViz.GLUtil
              , Graphics.RedViz.GLUtil.JuicyTextures
              , Graphics.RedViz.GLUtil.Textures
              , Graphics.RedViz.GLUtil.TypeMapping
              , Graphics.RedViz.Controllable
              , Graphics.RedViz.Descriptor
              , Graphics.RedViz.Input.Keyboard
              , Graphics.RedViz.Input.Mouse
              , Graphics.RedViz.Material.Lens
              , Graphics.RedViz.Texture

  default-language:
                Haskell2010

executable genProject
  main-is:      genProject.hs
  hs-source-dirs:
                app
              , src
  --ghc-options:         -threaded -O2 -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
  ghc-options:         -threaded -O2
  --cpp-options:         -DDEBUG
  build-depends:
                base                
              , aeson               
              , aeson-pretty        
              , bytestring          
              , containers          
              , ilist                                         
              , lens                
              , linear              
              , locators                        
              , OpenGL              
              , random                        
              , simple-affine-space           
              , text                
              , sort                
              , uuid                
              , vector
              , split

  other-modules:
                Paths_MSFs
              , Graphics.RedViz.Project.Lens
              , Graphics.RedViz.Project.Model
              , Graphics.RedViz.Texture
              , Graphics.RedViz.Utils
              , Projects.Test
              , Graphics.RedViz.Backend

  default-language:
                Haskell2010